# memanto

./: README.md  pyproject.toml
benchmarks/: benchmark_suite.py
examples/langgraph-memanto/: .env.example  .gitignore  README.md  app.py  graph.py  memanto_setup.py  requirements.txt  run_contradiction.py  run_full_demo.py  run_session_1.py  run_session_2.py  state.py
examples/langgraph-memanto-pr448/: .env.example  README.md  requirements.txt
examples/langgraph-memanto-pr448/langgraph_memanto/: memory_tools.py
examples/langgraph-memanto-pr472/: .env.example  README.md  memanto_tools.py  requirements.txt
examples/langgraph-memanto/basic_integration/: demo.py
examples/langgraph-memanto/cross_session_recall/: graph.py  main.py
examples/langgraph-memanto/custom_memory_saver/: agent.py  langgraph_agent.py  memanto_memory.py
examples/langgraph-memanto/research_pipeline/: run_writer.py
examples/langgraph-memanto/research_pipeline/langgraph_memanto/: graph.py  nodes.py
examples/langgraph-memory/: README.md
integrations/hermes-agents/: pyproject.toml
integrations/hermes-agents/hermes_memanto/: __init__.py  plugin.yaml
integrations/langgraph/: README.md  pyproject.toml
integrations/langgraph/langgraph_memanto/: __init__.py
integrations/mcp/: LICENSE  pyproject.toml
integrations/mcp/memanto_mcp/: tools.py
integrations/mcp/tests/: conftest.py  test_cli.py  test_config.py  test_server.py
memanto/app/clients/: onprem.py
memanto/app/routes/: memory.py
memanto/app/services/: memory_read_service.py
memanto/app/ui/routes/: ui_router.py
memanto/app/ui/static/: index.html
memanto/cli/client/: direct_client.py  sdk_client.py
memanto/cli/commands/: _shared.py  agent.py  config_cmd.py  core.py  memory.py
memanto/cli/ui/: display.py
tests/: conftest.py  test_api.py  test_backend.py  test_cli.py
