[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memanto-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Memanto - persistent semantic memory for any MCP-compatible agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4"
authors = [
    { name = "Memanto", email = "info@memanto.ai" }
]
keywords = [
    "memanto",
    "moorcheh",
    "mcp",
    "model-context-protocol",
    "agent memory",
    "semantic memory",
    "claude",
    "cursor",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "memanto>=0.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0,<4",
    "ruff>=0.14.6,<0.15",
    "mypy>=1.10.0,<2",
]

[project.scripts]
memanto-mcp = "memanto_mcp.__main__:main"

[project.urls]
Homepage = "https://www.memanto.ai"
Documentation = "https://docs.memanto.ai"
Repository = "https://github.com/moorcheh-ai/memanto"
"Bug Tracker" = "https://github.com/moorcheh-ai/memanto/issues"

[tool.hatch.build.targets.wheel]
packages = ["memanto_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B904", "E501", "B008", "C901"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
